Fixed background register form out of bounds

--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -272,12 +272,11 @@
 .bgRegisterForm {
   position: fixed;
   top: 0;
-  left: 0px;
+  left: 0;
   width: 100%;
   height: 100%;
   background-color: #1d212bd8;
   z-index: 25;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -294,6 +293,7 @@
   animation: textColor 10s ease infinite;
   padding: 25px;
   border-radius: 15px;
+  font-family: "Poppins";
 }
 
 .bgRegisterForm .registerForm::after {
